--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class = "row">
                 <div class = "col-md-7">
                     <h3 class = "listNames">LATEST EPISODES</h3>
-                    <table style="width:670px" class="epTable">
+                    <table style="width:670px" class="test">
                         <tr>
                             <td>
                                 <div class="imageSm">
@@ -195,8 +195,11 @@
                             </td>
                         </tr>
                     </table>
-
+                    
                     <h3 class="listNames">POPULAR EPISODES</h3>
+                    <table style="width:670px" class="test">
+                        <tr>
+                            <td>
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
@@ -204,13 +207,17 @@
                                         <span>No Exit (Ep.514)</span>
                                     </h2>
                                 </div>
+                            </td>
+                            <td>
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
                                         <span>The Vampire Diaries</span>
                                         <span>No Exit (Ep.514)</span>
                                     </h2> 
-                                </div>  
+                                </div>
+                            </td>
+                            <td>    
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
@@ -218,6 +225,10 @@
                                         <span>No Exit (Ep.514)</span>
                                     </h2>
                                 </div>       
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
@@ -225,6 +236,8 @@
                                         <span>No Exit (Ep.514)</span>
                                     </h2>
                                 </div>    
+                            </td>
+                            <td>
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
@@ -232,6 +245,8 @@
                                         <span>No Exit (Ep.514)</span>
                                     </h2>
                                 </div>       
+                            </td>
+                            <td>
                                 <div class="imageSm">
                                     <img src="img/Originals_episode.jpg" alt="" />
                                     <h2>
@@ -239,7 +254,12 @@
                                         <span>No Exit (Ep.514)</span>
                                     </h2>
                                 </div>       
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
+            <div class="row">
                 <div class = "col-md-5">
                     <h3 class="listNames">MY QUEUE</h3>
                     <div class="imageLg">
@@ -258,7 +278,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+       </div>
 
         <!-- Container for Photo Galleries -->
         <div class = "container">
