--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class = "row">
                 <div class = "col-md-7">
                     <h3 class = "listNames">LATEST EPISODES</h3>
-                    <table style="width:670px" class="test">
+                    <table style="width:670px" class="epiTable">
                         <tr>
                             <td>
                                 <div class="imageSm">
@@ -197,7 +197,7 @@
                     </table>
                     
                     <h3 class="listNames">POPULAR EPISODES</h3>
-                    <table style="width:670px" class="test">
+                    <table style="width:670px" class="epiTable">
                         <tr>
                             <td>
                                 <div class="imageSm">
@@ -262,20 +262,55 @@
             <div class="row">
                 <div class = "col-md-5">
                     <h3 class="listNames">MY QUEUE</h3>
-                    <div class="imageLg">
+                    <div class="imageLg" id="featured">
                         <img src="img/Originals_episode.jpg" alt="" />
                         <h2>
                             <span>The Vampire Diaries</span>
                             <span>No Exit (Ep.514)</span>
                         </h2>
                     </div>
-                    <div class="imageLg">
-                        <img src="img/Originals_episode.jpg" alt="" />
-                        <h2>
-                            <span>The Vampire Diaries</span>
-                            <span>No Exit (Ep.514)</span>
-                        </h2>
-                    </div>
+                    <table style="width:470px" class="epiTable">
+                        <tr>
+                            <td>
+                                <div class="imageSm">
+                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <h2>
+                                        <span>The Vampire Diaries</span>
+                                        <span>No Exit (Ep.514)</span>
+                                    </h2>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="imageSm">
+                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <h2>
+                                        <span>The Vampire Diaries</span>
+                                        <span>No Exit (Ep.514)</span>
+                                    </h2> 
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="imageSm">
+                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <h2>
+                                        <span>The Vampire Diaries</span>
+                                        <span>No Exit (Ep.514)</span>
+                                    </h2>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="imageSm">
+                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <h2>
+                                        <span>The Vampire Diaries</span>
+                                        <span>No Exit (Ep.514)</span>
+                                    </h2> 
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
        </div>
