--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class = "collapse navbar-collapse navHeaderCollapse">
                    <ul class = "nav navbar-nav navbar-right">
                         <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">SHOWS<b class = "caret"></b></a>
-                            <ul class = "dropdown-menu">
+                            <ul class = "dropdown-menu dropdown-text">
                                 <li><a href = "#">The Vampire Diaries</a></li>
                                 <li><a href = "#">The Originals</a></li>
                                 <li><a href = "#">Nikita</a></li>
@@ -50,7 +50,7 @@
                         <li><a href = "#">FULL EPISODES</a></li>
                         <li><a href = "#">SCHEDULE</a></li>
                         <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">MICHELLE<b class = "caret"></b></a>
-                            <ul class = "dropdown-menu">
+                            <ul class = "dropdown-menu dropdown-text">
                                 <li><a href = "#">My Shows</a></li>
                                 <li><a href = "#">Settings</a></li>
                                 <li><a href = "#">Help</a></li>
