--- a/index.html
+++ b/index.html
@@ -135,61 +135,43 @@
             <div class = "row">
                 <div class = "col-md-7">
                     <h3 class = "listNames">LATEST EPISODES</h3>
-                    <table style="width:670px" class="epiTable">
+                    <table style="width:620px" class="epiTable">
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/originals_storyville.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>The Originals</span>
+                                        <span>Farewell to Storyville (Ep.116)</span>
                                     </h2>
                                 </div>
                             </td>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/beautyandbeast_lastnight.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Beauty and the Beast</span>
+                                        <span>About Last Night (Ep.216)</span>
                                     </h2> 
                                 </div>
-                            </td>
-                            <td>    
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
-                                    <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
-                                    </h2>
-                                </div>       
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/TVD_gonegirl.jpg" alt="" />
                                     <h2>
                                         <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Gone Girl (Ep.515)</span>
                                     </h2>
                                 </div>    
                             </td>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/arrow_thepromise.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
-                                    </h2>
-                                </div>       
-                            </td>
-                            <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
-                                    <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Arrow</span>
+                                        <span>The Promise (Ep.215)</span>
                                     </h2>
                                 </div>       
                             </td>
@@ -197,11 +179,11 @@
                     </table>
                     
                     <h3 class="listNames">POPULAR EPISODES</h3>
-                    <table style="width:670px" class="epiTable">
+                    <table style="width:620px" class="epiTable">
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/TVD_noexit.jpg" alt="" />
                                     <h2>
                                         <span>The Vampire Diaries</span>
                                         <span>No Exit (Ep.514)</span>
@@ -210,48 +192,30 @@
                             </td>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/reign_royalblood.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Reign</span>
+                                        <span>Royal Blood (Ep.112)</span>
                                     </h2> 
                                 </div>
-                            </td>
-                            <td>    
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
-                                    <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
-                                    </h2>
-                                </div>       
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/TTP_enemyofenemy.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>The Tomorrow People</span>
+                                        <span>Enemy of My Enemy (Ep.115)</span>
                                     </h2>
                                 </div>    
                             </td>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                    <img src="img/supernatural_thinman.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
-                                    </h2>
-                                </div>       
-                            </td>
-                            <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
-                                    <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Supernatural</span>
+                                        <span>#THINMAN (Ep.915)</span>
                                     </h2>
                                 </div>       
                             </td>
@@ -263,54 +227,64 @@
                 <div class = "col-md-5">
                     <h3 class="listNames">MY QUEUE</h3>
                     <div class="imageLg" id="featured">
-                        <img src="img/Originals_episode.jpg" alt="" />
+                        <img src="img/TVD_gonegirl.jpg" alt="" />
                         <h2>
                             <span>The Vampire Diaries</span>
-                            <span>No Exit (Ep.514)</span>
+                            <span>Gone Girl (Ep.515)</span>
                         </h2>
                     </div>
-                    <table style="width:470px" class="epiTable">
+                    <table style="width:495px" class="epiTable">
                         <tr>
                             <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                <div class="imageSm imageSmlst">
+                                    <img src="img/originals_storyville.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>The Originals</span>
+                                        <span>Farewell to Storyville (Ep.116)</span>
                                     </h2>
                                 </div>
                             </td>
                             <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                <div class="imageSm imageSmlst">
+                                    <img src="img/beautyandbeast_lastnight.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>Beauty and the Beast</span>
+                                        <span>About Last Night (Ep.216)</span>
                                     </h2> 
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                <div class="imageSm imageSmlst">
+                                    <img src="img/originals_legrand.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>The Originals</span>
+                                        <span>Le Grand Guignol (Ep.115)</span>
                                     </h2>
                                 </div>
                             </td>
                             <td>
-                                <div class="imageSm">
-                                    <img src="img/Originals_episode.jpg" alt="" />
+                                <div class="imageSm imageSmlst">
+                                    <img src="img/TTP_enemyofenemy.jpg" alt="" />
                                     <h2>
-                                        <span>The Vampire Diaries</span>
-                                        <span>No Exit (Ep.514)</span>
+                                        <span>The Tomorrow People</span>
+                                        <span>Enemy of My Enemy (Ep.115)</span>
                                     </h2> 
                                 </div>
                             </td>
                         </tr>
                     </table>
+                    <div class = "tonight_schedule">
+                        <h1 class = "listNames">TONIGHT ON CWTV</h1>
+                        <p>8:00PM</p>
+                        <p>The Vampire Diaries - While You Were Sleeping (Ep.516)</p>
+                        <p>Season 5, Episode 16</p>
+                            <br>
+                        <p>9:00PM</p>
+                        <p>Reign - The Darkness</p>
+                        <p>Season 1, Episode 15</p>
+                    </div>
                 </div>
             </div>
        </div>
@@ -318,7 +292,33 @@
         <!-- Container for Photo Galleries -->
         <div class = "container">
             <div class = "row">
-
+                <div class = "col-md-12">
+                    <h3 class="listNames">PHOTO GALLERIES</h3>
+                    <table style="width:1200px" class="gallery">
+                        <tr>
+                            <td>
+                                <div class="">
+                                    <a href = "#"><img src="img/originals_gallery.jpg" alt="" /></a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <img src="img/arrow_gallery.jpg" alt="" />
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <img src="img/beautyandbeast_gallery.jpg" alt="" />
+                                </div>    
+                            </td>
+                            <td>
+                                <div class="">
+                                    <img src="img/TVD_gallery.jpg" alt="" />
+                                </div>    
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
    
