--- a/index.html
+++ b/index.html
@@ -78,44 +78,44 @@
                 <div class="item active">
                     <img src="img/TVD_cover.jpg" alt="" class="coverPhoto img-responsive" />
                      <div class="carousel-caption">
-                        <h1>The Vampire Diaries</h1>
                         <em class="lead">Watch the latest episode</em>
-                        <p>Season 5, Episode 15</p>
+                        <h1>The Vampire Diaries</h1>
                         <h3>Gone Girl</h3>
-                        <p>Nadia remembers her search for her mother while Elena's friends come up with a desperate plan to save her life.</p>
+                        <p>Nadia remembers her search for her mother while Elena's</p>
+                        <p>friends come up with a desperate plan to save her life.</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="img/Arrow_cover.jpg" alt="" class="coverPhoto img-responsive" />
                     <div class="carousel-caption">
-                        <h1>Arrow</h1>
                         <em class="lead">Watch the latest episode</em>
-                        <p>Season 2, Episode 15</p>
-                        <h3>The Promise</p>
-                        <p>Oliver faces a shocking surprise when he learns that Slade has come to Starling City.</p>
+                        <h1>Arrow</h1>
+                        <h3>The Promise</h3>
+                        <p>Oliver faces a shocking surprise when he</p>
+                        <p>learns that Slade has come to Starling City.</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="img/Reign_cover.jpg" alt="" class="coverPhoto img-responsive" />
                     <div class="carousel-caption">
-                        <h1>Reign</h1>
                         <em class="lead">Watch the latest episode</em>
-                        <p>Season 1, Episode 12</p>
-                        <h3>Royal Blood</p>
-                        <p>Mary and Bash work against the clock to find the kidnapped younger children of King Henry and Queen Catherine.</p>
+                        <h1>Reign</h1>
+                        <h3>Royal Blood</h3>
+                        <p>Mary and Bash work against the clock to find the</p>
+                        <p>kidnapped younger children of King Henry and Queen Catherine.</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="img/Tomorrow_cover.jpg" alt="" class="coverPhoto img-responsive" />
                     <div class="carousel-caption">
-                        <h1>The Tomorrow People</h1>
                         <em class="lead">Watch the latest episode</em>
-                        <p>Season 1, Episode 14</p>
-                        <h3>Brother's Keeper</p>
-                        <p>Stephen attempts to restore order in both his worlds after he gets shocking news.</p>
+                        <h1>The Tomorrow People</h1>
+                        <h3>Brother's Keeper</h3>
+                        <p>Stephen attempts to restore order in</p>
+                        <p>both his worlds after he gets shocking news.</p>
                     </div>
                 </div>
 
@@ -277,12 +277,14 @@
                     </table>
                     <div class = "tonight_schedule">
                         <h1 class = "listNames">TONIGHT ON CWTV</h1>
-                        <p>8:00PM</p>
-                        <p>The Vampire Diaries - While You Were Sleeping (Ep.516)</p>
+                        <h3>8:00PM</h3>
+                        <p><span class="show_name">The Vampire Diaries</span> - While You Were Sleeping</p>
                         <p>Season 5, Episode 16</p>
                             <br>
-                        <p>9:00PM</p>
-                        <p>Reign - The Darkness</p>
+                            <div class="border_line"></div>
+                            <br>
+                        <h3>9:00PM</h3>
+                        <p><span class="show_name">Reign</span> - The Darkness</p>
                         <p>Season 1, Episode 15</p>
                     </div>
                 </div>
@@ -290,7 +292,7 @@
        </div>
 
         <!-- Container for Photo Galleries -->
-        <div class = "container">
+        <div class = "container photo_galleries">
             <div class = "row">
                 <div class = "col-md-12">
                     <h3 class="listNames">PHOTO GALLERIES</h3>
@@ -298,22 +300,22 @@
                         <tr>
                             <td>
                                 <div class="">
-                                    <a href = "#"><img src="img/originals_gallery.jpg" alt="" /></a>
+                                    <a href = "#"><img src="img/originals_gallery.jpg" alt="" class="img-responsive" /></a>
                                 </div>
                             </td>
                             <td>
                                 <div class="">
-                                    <img src="img/arrow_gallery.jpg" alt="" />
+                                    <a href = "#"><img src="img/arrow_gallery.jpg" alt="" class="img-responsive" /></a>
                                 </div>
                             </td>
                             <td>
                                 <div class="">
-                                    <img src="img/beautyandbeast_gallery.jpg" alt="" />
+                                    <a href = "#"><img src="img/beautyandbeast_gallery.jpg" alt="" class="img-responsive" /></a>
                                 </div>    
                             </td>
                             <td>
                                 <div class="">
-                                    <img src="img/TVD_gallery.jpg" alt="" />
+                                    <a href = "#"><img src="img/TVD_gallery.jpg" alt="" class="img-responsive" /></a>
                                 </div>    
                             </td>
                         </tr>
