--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/TVD_cover.jpg" alt="" class="coverPhoto img-responsive" />
+                    <a href="http://www.google.com">
+                        <img src="img/TVD_cover.jpg" alt="" class="coverPhoto img-responsive" />
+                        <span class="play"></span>
+                    </a>
                      <div class="carousel-caption">
                         <em class="lead">Watch the latest episode</em>
                         <h1>The Vampire Diaries</h1>
@@ -140,7 +143,10 @@
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/originals_storyville.jpg" alt="" />
+                                    <a href="http://www.yahoo.com">
+                                        <img src="img/originals_storyville.jpg" alt="" />
+                                        <span class="play"></span>
+                                    </a>
                                     <h2>
                                         <span>The Originals</span>
                                         <span>Farewell to Storyville (Ep.116)</span>
@@ -184,7 +190,10 @@
                         <tr>
                             <td>
                                 <div class="imageSm">
-                                    <img src="img/TVD_noexit.jpg" alt="" />
+                                    <a href="http://www.yahoo.com">
+                                        <img src="img/TVD_noexit.jpg" alt="" />
+                                        <span class="play"></span>
+                                    </a>
                                     <h2>
                                         <span>The Vampire Diaries</span>
                                         <span>No Exit (Ep.514)</span>
